# ncurses-howto

./: CMakeLists.txt  Readme  attributes.cpp  colors.cpp  hello_world.cpp  initialization.cpp  io.cpp  key_menu.cpp  mouse_menu.cpp  window_border.cpp  windows.cpp
